# qck

./: .gitignore  pyproject.toml  qck.py  setup.cfg  test_qck.py
.github/workflows/: python-lint.yml  python-release.yml  python-test.yml
